syntax = "proto2";

import "protos/bls.proto";
package seth.address.protobuf;

enum AddressType {
    kNormal = 0;
    kRootElect = 2;
    kRootTimer = 3;
    kStatistic = 4;
    kImmutablePoolAddress = 5;
    kLocalToTxAddress = 6;
    kElectAddress = 7;
    kContractPrepayment = 8;
    kPoolAddress = 10;
}

message AddressInfo {
    optional bytes pubkey = 1;
    required uint64 balance = 2;
    required uint32 sharding_id = 3;
    required uint32 pool_index = 4;
    required bytes addr = 5;
    required AddressType type = 6;
    optional bytes bytes_code = 7;
    required uint64 latest_height = 8;
    optional int32 credit = 9 [default=0];
    repeated bls.protobuf.BlsPublicKey g2s = 10;
    optional uint32 elect_pos = 11 [default=4294967295];
    optional bool destructed = 12;
    optional uint64 consensus_gap = 13;
    required uint64 nonce = 14;
}
